[package]
name = "ponchik"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }

serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] } 
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
rand = "0.8.4"
google-sheets4 = "5.0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = {version = "*"}
chrono = {version = "*"}
anyhow = "*"
vercel_runtime = { version = "1.1.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[lib]
path = "src/lib.rs"

[[bin]]
name = "intro_launcher"
path = "api/intro_launcher.rs"

[[bin]]
name = "midpoint_launch"
path = "api/midpoint_launch.rs"

[[bin]]
name = "closing_launch"
path = "api/closing_launch.rs"

[[bin]]
name = "interact_handler"
path = "api/interact_handler.rs"
